@@ -246,6 +246,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13934) Fixing the link to GNU General Public License Version 2
 * Show correct accesskey prefix for Firefox 3 beta (Alt-Shift-, not Alt-)
 * (bug 13949) Special:PrefixIndex/AllPages paging links contain invalid XML
+* (bug 13770) Use Preprocessor_Hash by default to avoid missing DOM module errors
 
 === API changes in 1.13 ===
 
